--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,14 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.2.5'
     id 'io.spring.dependency-management' version '1.1.4'
+    id 'info.solidsoft.pitest' version '1.7.4'
 }
 
 group = 'com.swiftline'
 version = '0.0.1-SNAPSHOT'
 
 java {
-    sourceCompatibility = '21'
+    sourceCompatibility = '17'
 }
 
 configurations {
@@ -30,8 +31,24 @@ dependencies {
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
+    testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.mockito:mockito-core:5.12.0'
+    testImplementation 'org.jeasy:easy-random-core:5.0.0'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+}
+
+pitest {
+    targetClasses = ['com.swiftline.student.*']  // Change this to your package
+    targetTests = ['com.swiftline.student.*']    // Change this to your test package
+    mutationThreshold = 80
+    coverageThreshold = 80
+    outputFormats = ['HTML']
+    threads = 4
+    timestampedReports = false
+    verbose = true
+    testPlugin = 'junit5'
+    jvmArgs = ['-Dfile.encoding=UTF-8', '-Djava.version=17']
 }
 
 tasks.named('test') {
